--- a/views/client.pug
+++ b/views/client.pug
@@ -4,19 +4,61 @@ extends layout
 block content
     script(src="javascripts/codemirror.js")
     script(src="javascripts/codemirror-solidity/solidity.js") 
-    script(src="javascripts/hunter.js")
+    script(src="javascripts/client.js")
     link(rel="stylesheet", href="javascripts/codemirror-solidity/codemirror.css")
     link(rel="stylesheet", href="javascripts/codemirror-solidity/solidity.css")
-    link(rel="stylesheet", href="stylesheets/hunter.css")
-    h1 Employer interface
-    h2 Code
-    //- button#codeToggle Hide
-    textArea#code
-    h2 Deployment
-    form(action='/deploy/hunter', method='POST')
-        label(for='walletId') Wallet ID
-            input#walletId(type='text', name='walletId', value='', placeholder="hash fo wallet id" required)
-        br
-        label(for="gasLimit") Gas limit (Gwei) 
-        input#gasLimit(type="number", name="gasLimit", value=2000 required) 
-        button Deploy
+    link(rel="stylesheet", href="stylesheets/client.css")
+    form
+      .container
+        .col
+          h1 Sponsor
+          .form-group 
+            label Bounty Name
+            input.form-control(type='text' placeholder='Bounty name')
+          .form-group
+            label Description
+            textarea#description.form-control(placeholder='Description of the project')
+          .form-row
+            label Language
+            .col
+              select.form-control(style='/*word-wrap: inherit;*/')
+                option(value='12' selected='') Solidity
+                option(value='13') Rust
+                option(value='14') C++
+          .form-row
+            label Features
+            .col
+              .form-check
+                input#formCheck-1.form-check-input(type='checkbox')
+                label.form-check-label(for='formCheck-1') Chainlink
+            .col
+              .form-check
+                input#formCheck-2.form-check-input(type='checkbox')
+                label.form-check-label(for='formCheck-2') Tellor
+          br
+          div
+           .form-group
+            .row
+                label Code
+                input(type='file')
+            //-   .form-group
+            //-     h1 Deployment
+          br
+          .form-group
+            label Wallet ID
+            input.form-control(type='text' placeholder='Hash of Wallet ID')
+          .form-group
+            label Estimate Gas
+              button.btn.btn-primary(type='button' style='margin: 0px;margin-left: 0px;') Estimate
+              input.form-control-plaintext(type='text' value='10 458 Gwei' readonly='true')
+          .form-group
+            label Gas Limit (Gwei)
+            input.form-control(type='number' placeholder='Gas limit in Gwei')
+          .form-group
+            label Bounty (ETH)
+            input.form-control(type='number' placeholder='Reward Bounty in ETH')
+          .form-group
+            label Expiration Date
+            input.form-control(type='date')
+          .form-group
+            button.btn.btn-primary(type='button') Submit Contract
