--- a/views/hunter.pug
+++ b/views/hunter.pug
@@ -8,15 +8,59 @@ block content
     link(rel="stylesheet", href="javascripts/codemirror-solidity/codemirror.css")
     link(rel="stylesheet", href="javascripts/codemirror-solidity/solidity.css")
     link(rel="stylesheet", href="stylesheets/hunter.css")
-    h1 Bounty hunter interface
-    h2 Code
-    //- button#codeToggle Hide
-    textArea#code
-    h2 Deployment
-    form(action='/deploy/hunter', method='POST')
-        label(for='walletId') Wallet ID
-            input#walletId(type='text', name='walletId', value='', placeholder="hash fo wallet id" required)
-        br
-        label(for="gasLimit") Gas limit (Gwei) 
-        input#gasLimit(type="number", name="gasLimit", value=2000 required) 
-        button Deploy
+    form
+      .container
+        .col
+          h1 Hunter
+          .form-group 
+            label Bounty ID
+            input.form-control(type='text' placeholder='Bounty ID - unique hash')
+          .form-group
+            label Description
+            textarea#description.form-control(placeholder='Description of the project')
+          .form-row
+            label Language
+            .col
+              select.form-control(style='/*word-wrap: inherit;*/')
+                option(value='12' selected='') Solidity
+                option(value='13') Rust
+                option(value='14') C++
+          .form-row
+            label Features
+            .col
+              .form-check
+                input#formCheck-1.form-check-input(type='checkbox')
+                label.form-check-label(for='formCheck-1') Chainlink
+            .col
+              .form-check
+                input#formCheck-2.form-check-input(type='checkbox')
+                label.form-check-label(for='formCheck-2') Tellor
+          br
+          div
+           .form-group
+            .row
+                label Code
+                input(type='file')
+            //-   .form-group
+            //-     h1 Deployment
+          br
+          .form-group
+            label Wallet ID
+            input.form-control(type='text' placeholder='Hash of Wallet ID')
+          .form-group
+            label Estimate Gas
+              button.btn.btn-primary(type='button' style='margin: 0px;margin-left: 0px;') Estimate
+              input.form-control-plaintext(type='text' value='10 458 Gwei' readonly='true')
+          .form-group
+            label Test Code
+              input.form-control-plaintext(type='text' value='Passed' readonly='true')
+            .dropdown.show
+              button.btn.btn-primary.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' type='button') Test with Truffle
+            //-   .dropdown-menu.show
+            //-     a.dropdown-item(href='#') Test with Truffle
+            //-     a.dropdown-item(href='#') Download compiled .sol
+          .form-group
+            label Gas Limit (Gwei)
+            input.form-control(type='number' placeholder='Gas limit in Gwei')
+          .form-group
+            button.btn.btn-primary(type='button') Submit Contract
